fix some styling issues on mobile

--- a/src/scss/ContactMe.scss
+++ b/src/scss/ContactMe.scss
@@ -5,7 +5,6 @@
 .contactMe{
     width: calc(50vw + 20px);
     width: 100vw;
-    height: calc(100vh - 81px);
     display: grid;
     justify-content: center;
     align-items: center;
