--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -7,6 +7,7 @@
     display: flex;
     text-align: start;
     justify-content: space-around;
+    margin-top: 15px;
     .leftFooter{
         display: flex;
         flex-direction: column;
